improves ChainAgent